# engineering_thesis-master

./: .gitmodules  README.md  start.sh
argo_mini/: CMakeLists.txt  package.xml
argo_mini/config/: controllers_info.yaml  hardware.yaml  joy_conf.yaml  laser_filter_config.yaml
argo_mini/launch/: joy_steering.launch  mapping.launch  remote_nodes.launch  startup.launch
argo_mini/rviz/: rviz.rviz
argo_mini_hardware_interface/: CMakeLists.txt  package.xml
argo_mini_hardware_interface/config/: hardware.yaml
argo_mini_hardware_interface/include/argo_mini_hardware_interface/: argo_mini_hardware_interface.h  common.h  interface_handler.h  six_wheel_handler.h
argo_mini_hardware_interface/launch/: start.launch
argo_mini_hardware_interface/src/: argo_mini_hardware_interface.cpp  argo_mini_hardware_interface_node.cpp  six_wheel_handler.cpp
argo_mini_urdf_4w_drive/: CMakeLists.txt  package.xml
argo_mini_urdf_4w_drive/config/: joint_names_argo_mini_urdf_4w_drive.yaml
argo_mini_urdf_4w_drive/launch/: display.launch  gazebo.launch
argo_mini_urdf_4w_drive/meshes/: drive_base.STL  front_left_wheel_link.STL  front_right_wheel_link.STL  rear_left_wheel_link.STL  rear_right_wheel_link.STL
argo_mini_urdf_4w_drive/urdf/: argo_mini_urdf_4w_drive.csv  main.xacro
argo_mini_urdf_6w_drive/: CMakeLists.txt  package.xml
argo_mini_urdf_6w_drive/config/: joint_names_argo_mini_urdf_6w_drive.yaml
argo_mini_urdf_6w_drive/launch/: display.launch  gazebo.launch
argo_mini_urdf_6w_drive/meshes/: drive_base.STL  front_left_turn_link.STL  front_left_wheel_link.STL  front_right_turn_link.STL  front_right_wheel_link.STL  mid_left_turn_link.STL  mid_left_wheel_link.STL  mid_right_turn_link.STL  mid_right_wheel_link.STL  rear_left_turn_link.STL  rear_left_wheel_link.STL  rear_right_turn_link.STL  rear_right_wheel_link.STL
argo_mini_urdf_6w_drive/urdf/: argo_mini_urdf_6w_drive.csv  argo_mini_urdf_6w_drive.urdf  main.xacro
argo_mini_urdf_lamp/: CMakeLists.txt  package.xml  urdf.rviz
argo_mini_urdf_lamp/launch/: gazebo.launch
argo_mini_urdf_lamp/meshes/: lamp_base.STL  lamp_mid.STL  lamp_top.STL
argo_mini_urdf_lamp/urdf/: argo_mini_urdf_lamp.urdf  main.xacro
argo_mini_urdf_podstawa/: CMakeLists.txt  package.xml
argo_mini_urdf_podstawa/config/: modules_info.yaml
argo_mini_urdf_podstawa/launch/: display.launch  gazebo.launch
argo_mini_urdf_podstawa/urdf/: argo_mini_urdf_podstawa.csv  argo_mini_urdf_podstawa.urdf  argo_mini_urdf_podstawa.xacro
argo_mini_urdf_zed/: CMakeLists.txt  package.xml
argo_mini_urdf_zed/launch/: display.launch
argo_mini_urdf_zed/meshes/: zed_base.STL
argo_mini_urdf_zed/urdf/: argo_mini_urdf_zed.csv  main.xacro  zed.xacro
argo_mini_urdf_zed_gimbal/: CMakeLists.txt  package.xml
argo_mini_urdf_zed_gimbal/launch/: display.launch
argo_mini_urdf_zed_gimbal/meshes/: gimbal_pitch_link.STL  gimbal_yaw_link.STL  zed.STL
argo_mini_urdf_zed_gimbal/urdf/: main.xacro
aws-robomaker-small-warehouse-world/launch/: magazyn_z_18_tagami.launch
aws-robomaker-small-warehouse-world/models/markerdata_1/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
aws-robomaker-small-warehouse-world/models/markerdata_10/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
aws-robomaker-small-warehouse-world/models/markerdata_11/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
aws-robomaker-small-warehouse-world/models/markerdata_12/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
aws-robomaker-small-warehouse-world/models/markerdata_13/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
aws-robomaker-small-warehouse-world/models/markerdata_14/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
aws-robomaker-small-warehouse-world/models/markerdata_15/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
aws-robomaker-small-warehouse-world/models/markerdata_16/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
aws-robomaker-small-warehouse-world/models/markerdata_17/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
aws-robomaker-small-warehouse-world/models/markerdata_18/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
aws-robomaker-small-warehouse-world/models/markerdata_19/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
aws-robomaker-small-warehouse-world/models/markerdata_2/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
aws-robomaker-small-warehouse-world/models/markerdata_20/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
aws-robomaker-small-warehouse-world/models/markerdata_3/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
aws-robomaker-small-warehouse-world/models/markerdata_4/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
aws-robomaker-small-warehouse-world/models/markerdata_5/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
aws-robomaker-small-warehouse-world/models/markerdata_6/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
aws-robomaker-small-warehouse-world/models/markerdata_7/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
aws-robomaker-small-warehouse-world/worlds/: magazyn_z_18_tagami.world
six_wheel_steering_controller/: CMakeLists.txt  UML  package.xml  six_wheel_steering_controller_plugins.xml
six_wheel_steering_controller/include/six_wheel_steering_controller/: common.h  drive.h  kinematics.h  mode.h  six_wheel_steering_controller.h  speed_limiter.h  wheel_unit.h
six_wheel_steering_controller/include/six_wheel_steering_controller/modes/: mode1.h  mode2.h
six_wheel_steering_controller/src/: drive.cpp  kinematics.cpp  mode.cpp  six_wheel_steering_controller.cpp  speed_limiter.cpp  wheel_unit.cpp
six_wheel_steering_controller/src/modes/: mode1.cpp  mode2.cpp
six_wheel_steering_msgs/: CMakeLists.txt  package.xml
(+29 files in other folders)
