<?xml version="1.0"?>
<package format="2">
  <name>argo_mini</name>
  <version>0.0.0</version>
  <description>The argo_mini package</description>

  <maintainer email="prdabr@gmail.com">Przemysław Dąbrowski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>ipcamera_driver</exec_depend>

  <export>

  </export>
</package>
