<package format="2">
  <name>argo_mini_urdf_podstawa</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for argo_mini_urdf_podstawa</p>
    <p>This package contains configuration data, 3D models and launch files
for argo_mini_urdf_podstawa robot</p>
  </description>
  <maintainer email="prdabr@gmail.com">Przemysław Dąbrowski</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>